--- a/README.org
+++ b/README.org
@@ -18,6 +18,8 @@
   - [[#add-to-startup-applications][Add to startup applications]]
 - [[#miniconda][miniconda]]
 - [[#a-second-keyboard-input][a second keyboard input]]
+- [[#install-fish-shell][Install fish shell]]
+- [[#install-ruby-env][Install ruby env]]
 
 * Introduction
   This is an attempt to outline a process of building a complete working setup on a machine after installing a fresh operating system. Now this won't be exactly the same for all because we work on different things and our preferences are often not the same for completing the same task. For example, I will most be concerned about the setting up ~gnome~ desktop, but the outline should be similar for someone who wants to use, say, ~kde~ desktop. I use ~emacs~ for many of my daily task but others may prefer something else. However, the overall outline should work for anyone.
@@ -56,3 +58,15 @@
 * miniconda
 * a second keyboard input
   In my case, this happens to be [[https://openbangla.github.io/][OpenBangla]]
+* Install fish shell
+Instructions are [[https://fishshell.com/][here]].
+- Install fish: ~dnf install fish~
+- Make ~fish~ your default shell: Follow the [[https://fishshell.com/docs/current/index.html#default-shell][documentation]]
+   ~sudo chsh -s /usr/bin/fish~
+
+* Install ruby env
+- Clone the ~rbenv~ repo: ~git clone https://github.com/rbenv/rbenv.git ~/.rbenv/~
+- Add to ~fish~ shell: ~echo 'status --is-interactive; and ~/.rbenv/bin/rbenv init - fish | source' >> ~/.config/fish/config.fish~
+- Install ~ruby-build~: ~git clone https://github.com/rbenv/ruby-build.git "$(rbenv root)"/plugins/ruby-build~
+- Find latest stable ruby version: ~rbenv install -l~
+- Install a ruby version: ~rbenv install 3.2.2~
